checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000295728.8e73d15569f5a0577a8fa73f87817b476f68864f
WARNING:TYPO_SPELLING: 'Ths' may be misspelled - perhaps 'The'?
#38: 
> Ths leads me to the next error:
  ^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#41: 
> sound/sparc/cs4231.c:1573: error: `SNDRV_DMA_TYPE_PCI' undeclared (first use in this function)

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000295728.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 0 errors, 2 warnings, 0 checks, 8 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000295728.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
